# Mathprak-1

./: README.md
code/: CMakeLists.txt  gear_mesh.cpp  heat.py  heat_cat_face.py  result.cpp  result2.cpp  result_simple.cpp
stl/: Gear.stl
